--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Ram Mahat",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.6.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
